--- a/YourProjectName/Packages/manifest.json
+++ b/YourProjectName/Packages/manifest.json
@@ -1,16 +1,26 @@
 {
   "dependencies": {
-    "com.unity.ai.navigation": "2.0.5",
-    "com.unity.collab-proxy": "2.7.1",
-    "com.unity.ide.rider": "3.0.31",
+    "com.cysharp.r3": "1.2.9",
+    "com.cysharp.unitask": "2.5.10",
+    "com.dbrizov.naughtyattributes": "https://github.com/dbrizov/NaughtyAttributes.git#upm",
+    "com.harumak.upalette": "https://github.com/Haruma-K/uPalette.git?path=/Assets/uPalette#2.5.2",
+    "com.neon-izm.tmpro-fonts-rude": "https://github.com/neon-izm/UnityTextMeshProNotoSansForRude.git#upm",
+    "com.unity.ai.navigation": "2.0.4",
+    "com.unity.collab-proxy": "2.6.0",
+    "com.unity.ide.rider": "3.0.34",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.11.2",
+    "com.unity.localization": "1.5.3",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.5",
+    "jp.hadashikick.vcontainer": "https://github.com/hadashiA/VContainer.git?path=VContainer/Assets/VContainer#1.16.8",
+    "jp.hadashikick.vitalrouter": "https://github.com/hadashiA/VitalRouter.git?path=/src/VitalRouter.Unity/Assets/VitalRouter#1.6.0",
+    "jp.hadashikick.vitalrouter-mruby": "https://github.com/hadashiA/VitalRouter.git?path=/src/VitalRouter.Unity/Assets/VitalRouter.MRuby#1.6.0",
+    "org.nuget.r3": "1.2.9",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -43,5 +53,23 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "Unity NuGet",
+      "url": "https://unitynuget-registry.azurewebsites.net",
+      "scopes": [
+        "org.nuget"
+      ],
+      "overrideBuiltIns": false
+    },
+    {
+      "name": "OpenUPM",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.cysharp"
+      ],
+      "overrideBuiltIns": false
+    }
+  ]
 }
